MCR-2959 do not use commons-io